// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group should render disabled state properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #98A7B7;
}

.c10 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c10::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c8 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c8 ~ .c9 {
  border-color: #13181D;
}

.c8 ~ .c9::after {
  background-color: #13181D;
}

.c8:checked ~ .c9::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c8:disabled ~ .c9 {
  border-color: #98A7B7;
}

.c8:disabled ~ .c9::after {
  background-color: #98A7B7;
}

.c8:not(:disabled):checked ~ .c9 {
  border-color: #126AFA;
}

.c8:not(:disabled):checked ~ .c9::after {
  background-color: #126AFA;
}

.c8:not(:disabled):focus ~ .c9 {
  box-shadow: 0 0 0.8rem 0 rgba(18,106,250,0.35);
}

.c7 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <div
    aria-describedby="gender-helper-text"
    class="c0"
    id="gender-wrapper"
    type="radio"
  >
    <span
      class="c1 c2"
      disabled=""
      id="gender-label"
      type="radio"
    >
      Gender
    </span>
    <span
      class="c3"
      disabled=""
      id="gender-helper-text"
      type="radio"
    >
      Helper Text
    </span>
    <div
      class="c4"
      id="gender-options"
    >
      <label
        class="c5"
        disabled=""
        for="Female-gender"
        id="Female-gender-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c2"
          disabled=""
          id="Female-gender-label"
          type="radio"
        >
          Female
        </span>
        <div
          class="c7"
        >
          <input
            class="c8"
            disabled=""
            id="Female-gender"
            name="gender"
            sizes="[object Object]"
            type="radio"
            value="female"
          />
          <div
            class="c9 c10"
          />
        </div>
      </label>
      <label
        class="c5"
        disabled=""
        for="Male-gender"
        id="Male-gender-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c2"
          disabled=""
          id="Male-gender-label"
          type="radio"
        >
          Male
        </span>
        <div
          class="c7"
        >
          <input
            class="c8"
            disabled=""
            id="Male-gender"
            name="gender"
            sizes="[object Object]"
            type="radio"
            value="male"
          />
          <div
            class="c9 c10"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Radio Group should render properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #13181D;
}

.c10 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c10::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c8 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c8 ~ .c9 {
  border-color: #13181D;
}

.c8 ~ .c9::after {
  background-color: #13181D;
}

.c8:checked ~ .c9::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c8:disabled ~ .c9 {
  border-color: #98A7B7;
}

.c8:disabled ~ .c9::after {
  background-color: #98A7B7;
}

.c8:not(:disabled):checked ~ .c9 {
  border-color: #126AFA;
}

.c8:not(:disabled):checked ~ .c9::after {
  background-color: #126AFA;
}

.c8:not(:disabled):focus ~ .c9 {
  box-shadow: 0 0 0.8rem 0 rgba(18,106,250,0.35);
}

.c7 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c5:hover .c9 {
  border-color: #126AFA;
  box-shadow: 0 0 0.8rem 0 rgba(18,106,250,0.35);
}

.c5:active .c9 {
  border-color: #0F5AD5;
  box-shadow: 0 0 0.8rem 0 rgba(18,106,250,0.5);
}

<div>
  <div
    aria-describedby="gender-helper-text"
    class="c0"
    id="gender-wrapper"
    type="radio"
  >
    <span
      class="c1 c2"
      id="gender-label"
      type="radio"
    >
      Gender
    </span>
    <span
      class="c3"
      id="gender-helper-text"
      type="radio"
    >
      Helper Text
    </span>
    <div
      class="c4"
      id="gender-options"
    >
      <label
        class="c5"
        for="Female-gender"
        id="Female-gender-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c2"
          id="Female-gender-label"
          type="radio"
        >
          Female
        </span>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Female-gender"
            name="gender"
            sizes="[object Object]"
            type="radio"
            value="female"
          />
          <div
            class="c9 c10"
          />
        </div>
      </label>
      <label
        class="c5"
        for="Male-gender"
        id="Male-gender-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c2"
          id="Male-gender-label"
          type="radio"
        >
          Male
        </span>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Male-gender"
            name="gender"
            sizes="[object Object]"
            type="radio"
            value="male"
          />
          <div
            class="c9 c10"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;
